--- a/views/addCustomer.ejs
+++ b/views/addCustomer.ejs
@@ -25,8 +25,8 @@
                 </div>
                 <div class="col-6">
                     <div class="form-group">
-                        <label class="col-form-label" for="cnic">CNIC</label>
-                        <input type="text" class="form-control" name="cnic" placeholder="22222-2222222-2" id="cnic">
+                        <label class="col-form-label" for="email">Email</label>
+                        <input type="text" class="form-control" name="email" placeholder="enter your email" id="email">
                     </div>
                 </div>
                 <div class="col-12">
